# stylegraph

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
data/: clothing_items.csv
eval/: custom_llm.py  evaluation.py
graphs/: build_graph.py
rag/: generate_outfit.py
