[project]
name = "stylegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "datasets>=3.6.0",
    "deepeval>=3.0.3",
    "distro==1.9.0",
    "dotenv>=0.9.9",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "lm-format-enforcer>=0.10.11",
    "networkx==3.5",
    "numpy==2.2.6",
    "openai==1.82.1",
    "pandas==2.2.3",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "ragas>=0.2.15",
    "six==1.17.0",
    "sniffio==1.3.1",
    "torch>=2.7.0",
    "tqdm==4.67.1",
    "transformers>=4.52.4",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]
